--- a/style.css
+++ b/style.css
@@ -48,18 +48,29 @@ h2 {
   border-radius: 5px;
   box-shadow: 10px 10px 40px rgb(148, 143, 134);
 }
+.experiences-area:hover {
+  background-color: #000000e1;
+  color: #ffff;
+  width: 40%;
+  margin-left: 5%;
+  margin-right: 5%;
+  padding-left: 10px;
+  border-radius: 5px;
+  box-shadow: 10px 10px 40px rgb(22, 201, 177);
+}
+#full-stack-experiences {
+  border-left: 6px solid;
+  border-image-slice: 1;
+  border-image: repeating-linear-gradient(30deg, #c1c40e, #19ca9e, #080bc3 20px)
+    60;
+}
 #web-dev-experiences {
   border-left: 6px solid;
   border-image-slice: 1;
   border-image: repeating-linear-gradient(30deg, #4d9f0c, #9198e5, #4d9f0c 20px)
     60;
 }
-#full-stack-experiences {
-  border-left: 6px solid;
-  border-image-slice: 1;
-  border-image: repeating-linear-gradient(30deg, #c40eb4, #1928ca, #00d15e 20px)
-    60;
-}
+
 .top-banner {
   background-image: url(/images/top-banner.png);
   background-repeat: no-repeat;
