--- a/style.css
+++ b/style.css
@@ -72,18 +72,18 @@ h2 {
 }
 
 .top-banner {
-  background-image: url(/images/top-banner.png);
+  background-image: url(/img/top-banner.png);
   background-repeat: no-repeat;
 }
 
 /* second section area  */
 .dream-Big {
-  background-image: url(/images/dream-bg.png);
+  background-image: url(/img/dream-bg.png);
   background-repeat: no-repeat;
   background-position: right;
 }
 .Experiences-container {
-  background-image: url(/images/exp-bg.png);
+  background-image: url(/img/exp-bg.png);
   background-repeat: no-repeat;
   background-position: left;
 }
